Fixing 3/13 review issues.
Replaced the clipped icons with non-clipped ones.
Playing with changing the theme for better contrast.
Moving the RIB to the top, removing icons at mobile size.
TODO - replace icon-advanced.png and icon-advanced-over.png

--- a/bootstrap-cam/css/bootstrap-override.css
+++ b/bootstrap-cam/css/bootstrap-override.css
@@ -46,6 +46,20 @@
 	}
 }
 
+@media ( max-width : 767px) {
+	.row-fluid {
+		width: 100%;
+	}
+	.row {
+		margin-left: 0;
+	}
+	.row>[class*="span"],.row-fluid>[class*="span"] {
+		display: inline;
+		width: auto;
+		margin: 0;
+	}
+}
+
 @media ( min-width : 640px) and (max-width: 979px) {
 	.container {
 		width: 100%;
